# spectra-sieve

./: CMakeLists.txt  Makefile  README.MD  build.sh  liveplotcsv.py  plotcsv.py  pluto_stream.cpp  server.cpp  spectra_sieve.cpp  test_plutostream.sh  websocket_server.cpp  websocket_server.h
include/: fft_ops.h  iio_interface.h  websocket_server.h
src/: iio_interface.cpp  spectra_sieve.cpp  websocket_server.cpp
web/: index.html  script.js  spectrum.js
